# calculadora-imc-streamlit

./: README.md  imc.py  pyproject.toml
lib/: calc_imc.py  verificar_imc.py
