[tool.poetry]
name = "calculadora-imc-streamlit"
version = "0.1.0"
description = ""
authors = ["Breno Mendes <b.mendesbernardo2020@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.33.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
